# comptime_trie

./: Cargo.toml  LICENSE  Readme.md  create_asm.sh
output/: array_match_names.txt  array_match_names_nocolor.txt  fast_match_names.txt  fast_match_names_nocolor.txt  full_trie_match_names.txt  full_trie_match_names_nocolor.txt  just_match_names.txt  just_match_names_nocolor.txt
src/: lib.rs  main.rs
