[package]
name = "comptime_trie"
version = "0.1.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
proc-macro2 = "^1.0"
syn = "^1.0.38"
quote = "^1.0.7"

[lib]
name = "comptime_trie"
path = "src/lib.rs"
proc-macro = true

[[bin]]
name = "proc_test"
path = "src/main.rs"
